# flashback-terminal

./: .gitignore  README.md  action-agent-ideas.txt  clean_cache.sh  config.example.yaml  download_xterm_files.sh  flashback-test.sh  inspiration.txt  mitm_tools.txt  preferences.txt  profile-flashback.sh  pyproject.toml  related_project_urls.txt  remote_client_proxy_ideas.txt  remote_client_proxy_plan.txt  simplification-plan.txt  todo.txt  todo_remote_control_terminal.txt
asciinema_v3_test/: .gitignore  architecture.txt  asciinema_stream_to_tmux_and_capture_headless.py  audit_plan.txt  connect_to_websocket.py  issues.txt  test_capture.sh
flashback_terminal/: bm25_index.py  cli.py  config.py  database.py  deps.py  logger.py  retention.py  search.py  server.py  (+3 more)
terminal-capture-shell-golang-asciinema-event-receive-and-render/terminal-capture-shell-rust/: .gitignore  Cargo.toml  README.md  build-musl.sh  issues.txt  test.sh
terminal-capture-shell-golang-asciinema-event-receive-and-render/terminal-capture-shell-rust/src/: cli.rs  config.rs  main.rs  protocol.rs
terminal-capture-shell-golang-asciinema-event-receive-and-render/terminal-capture-shell-rust/src/capture/: buffer.rs  engine.rs
terminal-capture-shell-golang-asciinema-event-receive-and-render/terminal-capture-shell-rust/src/server/: client.rs
terminal-capture-shell-golang-asciinema-event-receive-and-render/terminal-capture-shell-rust/src/session/: server.rs
terminal-capture-shell-golang-asciinema-event-receive-and-render/terminal-capture-shell-rust/src/vt/: line.rs  mod.rs  parser.rs  pen.rs  util.rs
(+206 files in other folders)
