[package]
name = "terminal-capture-shell-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["James Brown"]
description = "Pure-Rust single-binary terminal capture tool with internal VT rendering"
license = "Apache-2.0"

[dependencies]
# CLI / config
clap = { version = "4", features = ["derive"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Unix PTY / TTY / signals
nix = { version = "0.30", features = ["fs", "term", "process", "signal", "poll"] }
libc = "0.2"

# HTTP upload (rustls avoids OpenSSL/libssl-dev dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# hashing / misc
md5 = "0.7"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1"
rgb = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "terminal-capture-shell-rust"
path = "src/main.rs"
